order,user,book,orderitems

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="../../../../css/login.css">
     <title>注册</title>
 </head>
 <body>
 <div id="loginform">
-    <img src="images/laofz.png" />
+    <img src="../../../../images/laofz.png" />
     <div id="form">
         <div class="text">
             用&nbsp;&nbsp;户&nbsp;&nbsp;名：<input id="user" type="text" name="user" placeholder="请填写用户名">
@@ -23,6 +23,6 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="js/register.js"></script>
+<script type="text/javascript" src="../../../../js/register.js"></script>
 </body>
 </html>
