--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="../../../../css/login.css">
     <title>登录</title>
 </head>
 <body>
     <div id="loginform">
-        <img src="images/laofz.png" />
+        <img src="../../../../images/laofz.png" />
         <div id="form">
             <div class="text">
                 用&nbsp;&nbsp;户&nbsp;&nbsp;名：<input id="user" type="text" name="user" placeholder="请填写用户名">
@@ -29,6 +29,6 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="../../../../js/login.js"></script>
 </body>
 </html>
