--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,21 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
     <!-- bootstrap -->
-    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
+    <link href="/laofuzi/admin/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="/laofuzi/admin/css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
+    <link href="/laofuzi/admin/css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
 
     <!-- libraries -->
-    <link href="css/lib/jquery-ui-1.10.2.custom.css" rel="stylesheet" type="text/css" />
-    <link href="css/lib/font-awesome.css" type="text/css" rel="stylesheet" />
+    <link href="/laofuzi/admin/css/lib/jquery-ui-1.10.2.custom.css" rel="stylesheet" type="text/css" />
+    <link href="/laofuzi/admin/css/lib/font-awesome.css" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="css/icons.css" />
+    <link rel="stylesheet" type="text/css" href="/laofuzi/admin/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="/laofuzi/admin/css/elements.css" />
+    <link rel="stylesheet" type="text/css" href="/laofuzi/admin/css/icons.css" />
 
     <!-- this page specific styles -->
-    <link rel="stylesheet" href="css/compiled/index.css" type="text/css" media="screen" />    
+    <link rel="stylesheet" href="/laofuzi/admin/css/compiled/index.css" type="text/css" media="screen" />
 
     
 
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img src="img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="/laofuzi/admin/img/logo.png" /></a>
 
             <ul class="nav pull-right">                
                 <li class="settings hidden-phone">
@@ -60,21 +60,21 @@
                     <div class="arrow"></div>
                     <div class="arrow_border"></div>
                 </div>
-                <a href="index.html">
+                <a href="/laofuzi/admin/index.html">
                     <i class="icon-home"></i>
                     <span>书籍管理</span>
                 </a>
             </li>            
             
             <li>
-                <a href="user-list.html">
+                <a href="/laofuzi/admin/user-list.html">
                     <i class="icon-group"></i>
                     <span>用户管理</span>
                 </a>
             </li>
           
             <li>
-                <a href="order.html">
+                <a href="/laofuzi/admin/order.html">
                     <i class="icon-cog"></i>
                     <span>订单管理</span>
                 </a>
@@ -115,7 +115,7 @@
                             </div>
 							-->
                             <input type="text" class="search" />
-                            <a class="btn-flat new-product" href="upbook.html">+ 添加书籍</a>
+                            <a class="btn-flat new-product" href="/laofuzi/admin/upbook.html">+ 添加书籍</a>
                         </div>
                     </div>
 
@@ -153,7 +153,7 @@
                                 <tr class="row1">
                                     <td>
                                         <input type="checkbox" />
-                                        <img src="img/books/房思琪的初恋乐园.jpg" width=100px; />  
+                                        <img src="/laofuzi/admin/img/books/房思琪的初恋乐园.jpg" width=100px; />
                                     </td>
                                     <td>
                                        <input type="text" id="bookname1" value="房思琪的初恋乐园" style="width:140px;" /> 
@@ -181,7 +181,7 @@
                                 <tr class="row2">
                                     <td>
                                         <input type="checkbox" />
-                                        <img src="img/books/冬泳.jpg" width=100px; /> 
+                                        <img src="/laofuzi/admin/img/books/冬泳.jpg" width=100px; />
                                     </td>
                                     <td>
                                        <input type="text" id="bookname2" value="冬泳" style="width:140px;" readonly="true" /> 
@@ -206,7 +206,7 @@
                                 <tr class="row3">
                                     <td>
                                         <input type="checkbox" />
-										<img src="img/books/python编程.jpg" width=100px;/>
+										<img src="/laofuzi/admin/img/books/python编程.jpg" width=100px;/>
            
                                     </td>
                                     <td>
@@ -232,7 +232,7 @@
                                 <tr class="row4">
                                     <td>
                                         <input type="checkbox" />
-										<img src="img/books/Java编程.jpg" width=100px;/>
+										<img src="/laofuzi/admin/img/books/Java编程.jpg" width=100px;/>
                                     </td>
                                     <td>
                                        <input type="text" id="bookname4" value="Java编程思想 （第4版）" style="width:140px;" readonly="true"/> 
@@ -257,7 +257,7 @@
                                 <tr class="row5">
                                     <td>
                                         <input type="checkbox" />
-                                            <img src="img/books/明朝那些事儿.jpg" width=100px;/>
+                                            <img src="/laofuzi/admin/img/books/明朝那些事儿.jpg" width=100px;/>
                                     </td>
                                    <td>
                                        <input type="text" id="bookname5" value="明朝那些事儿" style="width:140px;" readonly="true"/> 
@@ -301,15 +301,15 @@
 
 	<!-- scripts -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="/laofuzi/admin/js/bootstrap.min.js"></script>
+    <script src="/laofuzi/admin/js/jquery-ui-1.10.2.custom.min.js"></script>
     <!-- knob -->
-    <script src="js/jquery.knob.js"></script>
+    <script src="/laofuzi/admin/js/jquery.knob.js"></script>
     <!-- flot charts -->
-    <script src="js/jquery.flot.js"></script>
-    <script src="js/jquery.flot.stack.js"></script>
-    <script src="js/jquery.flot.resize.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="/laofuzi/admin/js/jquery.flot.js"></script>
+    <script src="/laofuzi/admin/js/jquery.flot.stack.js"></script>
+    <script src="/laofuzi/admin/js/jquery.flot.resize.js"></script>
+    <script src="/laofuzi/admin/js/theme.js"></script>
 
     <script type="text/javascript">
         $(function () {
