--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -6,20 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
     <!-- bootstrap -->
-    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
+    <link href="../../static/admin/css/bootstrap/bootstrap.css" rel="stylesheet" />
+    <link href="../../static/admin/css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
+    <link href="../../static/admin/css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
 
     <!-- global styles -->
-    <link rel="stylesheet" type="text/css" href="css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="css/icons.css" />
+    <link rel="stylesheet" type="text/css" href="../../static/admin/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="../../static/admin/css/elements.css" />
+    <link rel="stylesheet" type="text/css" href="../../static/admin/css/icons.css" />
 
     <!-- libraries -->
-    <link href="css/lib/font-awesome.css" type="text/css" rel="stylesheet" />
+    <link href="../../static/admin/css/lib/font-awesome.css" type="text/css" rel="stylesheet" />
     
     <!-- this page specific styles -->
-    <link rel="stylesheet" href="css/compiled/user-list.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="../../static/admin/css/compiled/user-list.css" type="text/css" media="screen" />
 
     <!-- open sans font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img src="img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="../../static/admin/img/logo.png" /></a>
 
             <ul class="nav pull-right">                
                 <li class="settings hidden-phone">
@@ -238,8 +238,8 @@
 
 	<!-- scripts -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="../../static/admin/js/bootstrap.min.js"></script>
+    <script src="../../static/admin/js/theme.js"></script>
 	<script type="text/javascript">
         $(function () {
             //表格加载数据
