--- a/src/main/resources/static/admin/css/compiled/signin.css
+++ b/src/main/resources/static/admin/css/compiled/signin.css
@@ -1,5 +1,5 @@
 .login-bg {
-  background: url("../../img/bgs/9.jpg") no-repeat center center fixed;
+  background: url("../../../images/bgs/9.jpg") no-repeat center center fixed;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bgs/landscape.jpg', sizingMethod='scale');
   -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bgs/landscape.jpg', sizingMethod='scale')";
   -webkit-background-size: cover;
