--- a/src/main/resources/templates/admin/upbook.html
+++ b/src/main/resources/templates/admin/upbook.html
@@ -33,7 +33,7 @@
     <!-- navbar -->
     <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-            <a class="brand" href="index.html"><img src="../../static/admin/img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="../../static/images/logo.png" /></a>
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
