--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img src="../../static/admin/img/logo.png" /></a>
+            <a class="brand" href="index.html"><img src="../../static/images/logo.png" /></a>
 
             <ul class="nav pull-right">                
                 <li class="settings hidden-phone">
