--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -23,5 +23,10 @@
     <footer>
 
     </footer>
+    <!--<script>-->
+        <!--var div = document.getElementById("left");-->
+        <!--var str = "<div>nihao</div>";-->
+        <!--div.append("str");-->
+    <!--</script>-->
 </body>
 </html>
