--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>首页</title>
+	<title>首页77</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
