--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -156,7 +156,7 @@
                                         <img th:src="${book.img}" width=100px; />
                                     </td>
                                     <td>
-                                       <input type="text" id="bookname1" th:value="${book.name}" style="width:140px;" />
+                                       <input type="text" id="bookname1" th:value="${book.name}" style="width:140px;" readonly="true"/>
 									</td>
                                     <td><input type="text" id="author1" th:value="${book.author}" style="width:140px;" readonly="true"/></td>
                                     <td >
