--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -115,7 +115,7 @@
                             </div>
 							-->
                             <input type="text" class="search" />
-                            <a class="btn-flat new-product" href="/laofuzi/upbook.html">+ 添加书籍</a>
+                            <a class="btn-flat new-product" th:href="@{/admin/upbook}">+ 添加书籍</a>
                         </div>
                     </div>
 
