--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
             </button>
             
-            <a class="brand" href="index.html"><img th:src="@{/images/logo.png}" /></a>
+            <a class="brand" href="index"><img th:src="@{/images/logo.png}" /></a>
 
             <ul class="nav pull-right">                
                 <li class="settings hidden-phone">
@@ -60,21 +60,21 @@
                     <div class="arrow"></div>
                     <div class="arrow_border"></div>
                 </div>
-                <a href="/laofuzi/admin/index.html">
+                <a href="/laofuzi/admin/index">
                     <i class="icon-home"></i>
                     <span>书籍管理</span>
                 </a>
             </li>            
             
             <li>
-                <a href="/laofuzi/admin/user-list.html">
+                <a href="/laofuzi/admin/user-list">
                     <i class="icon-group"></i>
                     <span>用户管理</span>
                 </a>
             </li>
           
             <li>
-                <a href="/laofuzi/admin/order.html">
+                <a href="/laofuzi/admin/order">
                     <i class="icon-cog"></i>
                     <span>订单管理</span>
                 </a>
