--- a/src/main/resources/templates/admin/orderdetail.html
+++ b/src/main/resources/templates/admin/orderdetail.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
     <title>订单详情页</title>
@@ -33,7 +34,7 @@
 <!-- navbar -->
 <div class="navbar navbar-inverse">
     <div class="navbar-inner">
-        <a class="brand" href="index.html"><img src="img/logo.png" /></a>
+        <a class="brand" href="index"><img th:src="@{/images/logo.png}" /></a>
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -41,9 +42,9 @@
         </button>
         <div class="nav-collapse collapse">
             <ul class="nav">
-                <li><a href="index.html">书籍管理</a></li>
-                <li><a href="user-list.html">用户管理</a></li>
-                <li ><a href="order.html">订单管理</a></li>
+                <li><a href="index">书籍管理</a></li>
+                <li><a href="user-list">用户管理</a></li>
+                <li ><a href="order">订单管理</a></li>
 
             </ul>
         </div>
