--- a/src/main/resources/templates/admin/orderdetail.html
+++ b/src/main/resources/templates/admin/orderdetail.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
     <title>订单详情页</title>
@@ -34,7 +33,7 @@
 <!-- navbar -->
 <div class="navbar navbar-inverse">
     <div class="navbar-inner">
-        <a class="brand" href="index"><img th:src="@{/images/logo.png}" /></a>
+        <a class="brand" href="index.html"><img th:src="@{/images/logo.png}" /></a>
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -166,9 +165,9 @@
             type: "post",
             dataType: "json",
             contentType: 'application/json',
-            url: "http://localhost:8080/laofuzi/order_items//findByOrderId",
+            url: "http://localhost:8080/laofuzi/order_items/findByOrderId",
             data:JSON.stringify({
-                "orderId":getQueryVariable("orderid"),
+                "orderId":1,
             }),
             success: function (result) {
                 console.log(result);
@@ -280,88 +279,7 @@
 
 
 
-        // jQuery Flot Chart
-        var visits = [[1, 50], [2, 40], [3, 45], [4, 23],[5, 55],[6, 65],[7, 61],[8, 70],[9, 65],[10, 75],[11, 57],[12, 59]];
-        var visitors = [[1, 25], [2, 50], [3, 23], [4, 48],[5, 38],[6, 40],[7, 47],[8, 55],[9, 43],[10,50],[11,47],[12, 39]];
 
-        var plot = $.plot($("#statsChart"),
-            [ { data: visits, label: "Signups"},
-                { data: visitors, label: "Visits" }], {
-                series: {
-                    lines: { show: true,
-                        lineWidth: 1,
-                        fill: true,
-                        fillColor: { colors: [ { opacity: 0.1 }, { opacity: 0.13 } ] }
-                    },
-                    points: { show: true,
-                        lineWidth: 2,
-                        radius: 3
-                    },
-                    shadowSize: 0,
-                    stack: true
-                },
-                grid: { hoverable: true,
-                    clickable: true,
-                    tickColor: "#f9f9f9",
-                    borderWidth: 0
-                },
-                legend: {
-                    // show: false
-                    labelBoxBorderColor: "#fff"
-                },
-                colors: ["#a7b5c5", "#30a0eb"],
-                xaxis: {
-                    ticks: [[1, "JAN"], [2, "FEB"], [3, "MAR"], [4,"APR"], [5,"MAY"], [6,"JUN"],
-                        [7,"JUL"], [8,"AUG"], [9,"SEP"], [10,"OCT"], [11,"NOV"], [12,"DEC"]],
-                    font: {
-                        size: 12,
-                        family: "Open Sans, Arial",
-                        variant: "small-caps",
-                        color: "#697695"
-                    }
-                },
-                yaxis: {
-                    ticks:3,
-                    tickDecimals: 0,
-                    font: {size:12, color: "#9da3a9"}
-                }
-            });
-
-        function showTooltip(x, y, contents) {
-            $('<div id="tooltip">' + contents + '</div>').css( {
-                position: 'absolute',
-                display: 'none',
-                top: y - 30,
-                left: x - 50,
-                color: "#fff",
-                padding: '2px 5px',
-                'border-radius': '6px',
-                'background-color': '#000',
-                opacity: 0.80
-            }).appendTo("body").fadeIn(200);
-        }
-
-        var previousPoint = null;
-        $("#statsChart").bind("plothover", function (event, pos, item) {
-            if (item) {
-                if (previousPoint != item.dataIndex) {
-                    previousPoint = item.dataIndex;
-
-                    $("#tooltip").remove();
-                    var x = item.datapoint[0].toFixed(0),
-                        y = item.datapoint[1].toFixed(0);
-
-                    var month = item.series.xaxis.ticks[item.dataIndex].label;
-
-                    showTooltip(item.pageX, item.pageY,
-                        item.series.label + " of " + month + ": " + y);
-                }
-            }
-            else {
-                $("#tooltip").remove();
-                previousPoint = null;
-            }
-        });
     });
 </script>
 
